# k_dht22

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h  configure  configure.in  dht22.c  install-sh  locking.c  locking.h
